centro de costo

--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -98,6 +98,8 @@
     <Compile Include="Contabilidad\ct_cbtecble_Bus.cs" />
     <Compile Include="Contabilidad\ct_cbtecble_det_Bus.cs" />
     <Compile Include="Contabilidad\ct_cbtecble_tipo_Bus.cs" />
+    <Compile Include="Contabilidad\ct_CentroCostoNivel_Bus.cs" />
+    <Compile Include="Contabilidad\ct_CentroCosto_Bus.cs" />
     <Compile Include="Contabilidad\ct_CierrePorModuloPorSucursal_Bus.cs" />
     <Compile Include="Contabilidad\ct_grupocble_Bus.cs" />
     <Compile Include="Contabilidad\ct_parametro_Bus.cs" />
