--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -2031,7 +2031,7 @@
     <Compile Include="vwcom_ordencompra_local_det.cs">
       <DependentUpon>Model_compras.tt</DependentUpon>
     </Compile>
-    <Compile Include="vwcom_ordencompra_local_x_ingresar.cs">
+    <Compile Include="vwcom_ordencompra_local_detPorIngresar.cs">
       <DependentUpon>Model_compras.tt</DependentUpon>
     </Compile>
     <Compile Include="VWCONTA_001.cs">
@@ -2416,6 +2416,9 @@
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
     <Compile Include="vwin_devolucion_inven_det.cs">
+      <DependentUpon>Model_inventario.tt</DependentUpon>
+    </Compile>
+    <Compile Include="vwin_Ing_Egr_InvenPorOrdenCompra.cs">
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
     <Compile Include="vwin_Ing_Egr_Inven_det_conversion.cs">
