--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -133,6 +133,7 @@
     </Compile>
     <Compile Include="Banco\ba_Archivo_Transferencia_Data.cs" />
     <Compile Include="Banco\ba_Archivo_Transferencia_Det_Data.cs" />
+    <Compile Include="Banco\ba_archivo_transferencia_x_ba_tipo_flujo_Data.cs" />
     <Compile Include="Banco\ba_Banco_Cuenta_Data.cs" />
     <Compile Include="Banco\ba_Banco_Cuenta_x_tb_sucursal_Data.cs" />
     <Compile Include="Banco\ba_Caja_Movimiento_x_Cbte_Ban_x_Deposito_Data.cs" />
@@ -155,6 +156,9 @@
       <DependentUpon>Model_banco.tt</DependentUpon>
     </Compile>
     <Compile Include="ba_Archivo_Transferencia_Det.cs">
+      <DependentUpon>Model_banco.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ba_archivo_transferencia_x_ba_tipo_flujo.cs">
       <DependentUpon>Model_banco.tt</DependentUpon>
     </Compile>
     <Compile Include="ba_Banco_Cuenta.cs">
