--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ActivoFijo\Af_Venta_Activo_Info.cs" />
     <Compile Include="Banco\ba_Archivo_Transferencia_Det_Info.cs" />
     <Compile Include="Banco\ba_Archivo_Transferencia_Info.cs" />
+    <Compile Include="Banco\ba_archivo_transferencia_x_ba_tipo_flujo_Info.cs" />
     <Compile Include="Banco\ba_Banco_Cuenta_Info.cs" />
     <Compile Include="Banco\ba_Banco_Cuenta_x_tb_sucursal_Info.cs" />
     <Compile Include="Banco\ba_Caja_Movimiento_x_Cbte_Ban_x_Deposito_Info.cs" />
