--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -633,6 +633,12 @@
     <Compile Include="Reportes\Banco\BAN_009_Rpt.Designer.cs">
       <DependentUpon>BAN_009_Rpt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\Banco\BAN_010_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\Banco\BAN_010_Rpt.Designer.cs">
+      <DependentUpon>BAN_010_Rpt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\Caja\CAJ_001_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -10032,6 +10038,7 @@
     <Content Include="Areas\Contabilidad\Views\CentroCosto\Index.cshtml" />
     <Content Include="Areas\Contabilidad\Views\CentroCosto\Modificar.cshtml" />
     <Content Include="Areas\Contabilidad\Views\CentroCosto\Nuevo.cshtml" />
+    <Content Include="Areas\Reportes\Views\BancoReportes\BAN_010.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
@@ -10155,6 +10162,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Reportes\ActivoFijo\ACTF_001_Rpt.resx">
       <DependentUpon>ACTF_001_Rpt.cs</DependentUpon>
     </EmbeddedResource>
@@ -10220,6 +10228,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Banco\BAN_009_Rpt.resx">
       <DependentUpon>BAN_009_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Banco\BAN_010_Rpt.resx">
+      <DependentUpon>BAN_010_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Caja\CAJ_001_Rpt.resx">
       <DependentUpon>CAJ_001_Rpt.cs</DependentUpon>
