--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ActivoFijo\Af_Activo_fijo_Bus.cs" />
     <Compile Include="ActivoFijo\Af_Activo_fijo_Categoria_Bus.cs" />
     <Compile Include="ActivoFijo\Af_Activo_fijo_tipo_Bus.cs" />
+    <Compile Include="ActivoFijo\Af_Area_Bus.cs" />
     <Compile Include="ActivoFijo\Af_CatalogoTipo_Bus.cs" />
     <Compile Include="ActivoFijo\Af_Catalogo_Bus.cs" />
     <Compile Include="ActivoFijo\Af_Departamento_Bus.cs" />
