--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -640,6 +640,12 @@
     <Compile Include="Reportes\Banco\BAN_010_Rpt.Designer.cs">
       <DependentUpon>BAN_010_Rpt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\Banco\BAN_011_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\Banco\BAN_011_Rpt.Designer.cs">
+      <DependentUpon>BAN_011_Rpt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\Caja\CAJ_001_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -10052,6 +10058,8 @@
     <Content Include="Areas\ActivoFijo\Views\AreaAF\Anular.cshtml" />
     <Content Include="Areas\Inventario\Views\IngresoInventarioOrdenCompra\_CmbProducto_IngresoOrdenCompra_ReadOnly.cshtml" />
     <Content Include="Areas\Reportes\Views\InventarioReportes\INV_017.cshtml" />
+    <Content Include="Areas\Reportes\Views\BancoReportes\BAN_010.cshtml" />
+    <Content Include="Areas\Reportes\Views\BancoReportes\BAN_011.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
     <Content Include="Areas\RRHH\Views\HorasExtras\Index.cshtml" />
@@ -10170,6 +10178,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Reportes\ActivoFijo\ACTF_001_Rpt.resx">
       <DependentUpon>ACTF_001_Rpt.cs</DependentUpon>
     </EmbeddedResource>
@@ -10238,6 +10247,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Banco\BAN_010_Rpt.resx">
       <DependentUpon>BAN_010_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Banco\BAN_011_Rpt.resx">
+      <DependentUpon>BAN_011_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Caja\CAJ_001_Rpt.resx">
       <DependentUpon>CAJ_001_Rpt.cs</DependentUpon>
