--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -276,6 +276,8 @@
     <Compile Include="Importacion\imp_orden_compra_ext_recepcion_Info.cs" />
     <Compile Include="Importacion\imp_parametro_Info.cs" />
     <Compile Include="Importacion\imp_partida_arancelaria_Info.cs" />
+    <Compile Include="Inventario\in_AjusteDet_Info.cs" />
+    <Compile Include="Inventario\in_Ajuste_Info.cs" />
     <Compile Include="Inventario\in_CatalogoTipo_Info.cs" />
     <Compile Include="Inventario\in_Catalogo_Info.cs" />
     <Compile Include="Inventario\in_categorias_Info.cs" />
