--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -228,6 +228,7 @@
     <Compile Include="Importacion\imp_orden_compra_ext_recepcion_Bus.cs" />
     <Compile Include="Importacion\imp_parametro_Bus.cs" />
     <Compile Include="Importacion\imp_partida_arancelaria_Bus.cs" />
+    <Compile Include="Inventario\in_AjusteDet_Bus.cs" />
     <Compile Include="Inventario\in_Ajuste_Bus.cs" />
     <Compile Include="Inventario\in_CatalogoTipo_Bus.cs" />
     <Compile Include="Inventario\in_Catalogo_Bus.cs" />
