--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -10084,6 +10084,7 @@
     <Content Include="Areas\Inventario\Views\AjusteFisicoInventario\_CmbProducto_AjusteFisico.cshtml" />
     <Content Include="Areas\Inventario\Views\AjusteFisicoInventario\Modificar.cshtml" />
     <Content Include="Areas\Inventario\Views\AjusteFisicoInventario\Anular.cshtml" />
+    <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_018.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
     <Content Include="Areas\RRHH\Views\HorasExtras\Index.cshtml" />
@@ -10202,6 +10203,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Reportes\ActivoFijo\ACTF_001_Rpt.resx">
       <DependentUpon>ACTF_001_Rpt.cs</DependentUpon>
     </EmbeddedResource>
